# 01.BUILD-DEPLOY

./: CMakeLists.txt  README.md
.github/workflows/: release.yaml
lib/: lib.h
tests/: CMakeLists.txt  test_version.cpp
